5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1649_2703.log
== TEST (2019-04-05 20:24:14) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor =>):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(leitor =>):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:24:39) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor = > 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(leitor = > 18):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:24:50) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor == > 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(leitor == > 18):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:25:01) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor == >> 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(leitor == >> 18):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:25:14) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor ==> 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- ERROR:
File "XXXX", line 2
    if(leitor ==> 18):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:26:28) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor >= 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:26:35) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor >= 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:26:43) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor >= 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- EXECUTION TIME:
0.13788
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_leitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:27:40) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor >= 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:27:47) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor >= 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:27:53) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor >= 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:28:00) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor >= 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_leitor"
	print(mensagem.lower())
-- OUTPUT:
nao_leitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:28:11) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor >= 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_eleitor"
	print(mensagem.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:28:17) 
-- CODE:
leitor = int(input("Digite a sua idade: "))
if(leitor >= 18):
	mensagem = "eleitor"
	print(mensagem.lower())
else:
	mensagem = "nao_eleitor"
	print(mensagem.lower())
-- EXECUTION TIME:
0.125273
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
